# datovka

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  README  configure.ac  coverity_model.c  coverity_model.cpp  datovka-cli.pro  datovka-cli.pro.noauto  datovka.pro  guid.txt  moc.mk  qdatovka.pro
deployment/: datovka.appdata.xml  datovka.desktop  datovka.plist
doc/: Doxyfile
libs_static/: build_libisds_mingw.sh  build_libisds_osx.sh
locale/: datovka_cs.ts  datovka_cz.ts  datovka_en.ts
msi/: datovka_installer.wxs  make_installer.bat
notes/: libdepends.win  libisds_mingw.txt  libopts_configure.ac
nsis/: build.txt
pri/: check_qt_version.pri  version.pri
res/: LICENSE.txt  datovka.icns  datovka.rc  datovka.xcf  icon.rc  qt.conf_windows  resources.qrc
scripts/: build-win-all.bat  build-win-install-package.bat  build-win-portable-package.bat  build_distrofiles.sh  build_distrofiles_datovka.sh  build_distrofiles_libisds.sh  build_dmg.sh  build_git_archive.sh  build_in_obs.sh  build_in_obs_datovka.sh  build_in_obs_libisds.sh  build_libisds_macos.sh  build_libisds_mingw.sh  build_libisds_osx.sh  build_macos_dmgs.sh  build_osx_dmgs.sh  build_windows_bundle.sh  check_shared_code.sh  datovka-log.bat  datovka-portable-log.bat  dependency_sources.sh  helper_dependency_sources.sh  helper_generic.sh  helper_packaging.sh  macos_bundle_shared_libs.sh  make-win.bat  sign-app-windows.bat  sign-msi-windows.bat  sign_datovka_dmg.sh  sign_datovka_msi.sh  sign_datovka_nsis.sh  sign_datovka_zip.sh  sign_macos_packages.sh  sign_windows_packages.bat  windows_build_packages.sh  (+1 more)
(+741 files in other folders)
